Complete single page student info app

--- a/react_07/assignment_01/src/components/css/nav.css
+++ b/react_07/assignment_01/src/components/css/nav.css
@@ -1,5 +1,6 @@
 .cont{
-    background-color: #bbe4e9;
+    background-color: #004445;
+    color: #d5eeff;
     height: 60px;
     padding: 10px;
 }
